frontend: изменение настроек cors